# OpenXLSX

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  GEMINI.md  LICENSE.md  Missing_Excel_Functions_Checklist.md  README.md  STREAMING_READER_PLAN.md
.github/workflows/: ci.yml  doxygen-pages.yml  release.yml
Benchmarks/: BENCHMARK_HISTORY.md  Benchmark.cpp  CMakeLists.txt
Documentation/: CMakeLists.txt  ChartTutorial.md  CommentsTutorial.md  Doxyfile.in  FormulaTutorial.md  PageLayoutTutorial.md  PanesTutorial.md  PivotTableTutorial.md  QuickStart.md  RichTextTutorial.md  StreamWriterTutorial.md
Examples/: CMakeLists.txt  Demo10.cpp  Demo9.cpp
OpenXLSX/: CMakeLists.txt  OpenXLSX.hpp
OpenXLSX/headers/: IZipArchive.hpp  XLAutoFilter.hpp  XLCell.hpp  XLCellIterator.hpp  XLCellRange.hpp  XLCellReference.hpp  XLCellValue.hpp  XLChart.hpp  XLChartsheet.hpp  XLColor.hpp  XLColumn.hpp  XLCommandQuery.hpp  XLComments.hpp  XLConditionalFormatting.hpp  XLConstants.hpp  XLContentTypes.hpp  XLCrypto.hpp  XLDataValidation.hpp  XLDateTime.hpp  XLDocument.hpp  XLDrawing.hpp  XLDynamicFilter.hpp  XLEMUConverter.hpp  XLException.hpp  XLFormula.hpp  XLFormulaEngine.hpp  XLFormulaUtils.hpp  XLImageOptions.hpp  XLImageParser.hpp  XLInternalAccess.hpp  XLIterator.hpp  XLMergeCells.hpp  XLNumberFormatter.hpp  XLPageSetup.hpp  XLPivotTable.hpp  XLProperties.hpp  XLRelationships.hpp  XLRichText.hpp  XLRow.hpp  XLRowData.hpp  (+20 more)
OpenXLSX/sources/: XLAutoFilter.cpp  XLCell.cpp  XLCellIterator.cpp  XLCellRange.cpp  XLCellReference.cpp  XLCellValue.cpp  XLChart.cpp  XLChartsheet.cpp  XLColor.cpp  XLColumn.cpp  XLComments.cpp  XLConditionalFormatting.cpp  XLContentTypes.cpp  XLCrypto.cpp  XLDataValidation.cpp  XLDateTime.cpp  XLDocument.cpp  XLDocument_Commands.cpp  XLDocument_Properties.cpp  XLDocument_Templates.hpp  XLDrawing.cpp  XLDynamicFilter.cpp  XLFormula.cpp  XLFormulaEngine.cpp  XLFormulaFunctions.cpp  XLFormulaParser.cpp  XLFormulaUtils.cpp  XLImageParser.cpp  XLMergeCells.cpp  XLNumberFormatter.cpp  XLPageSetup.cpp  XLPivotTable.cpp  XLProperties.cpp  XLRelationships.cpp  XLRow.cpp  XLRowData.cpp  XLSharedStrings.cpp  XLSheet.cpp  XLSparkline.cpp  XLStreamReader.cpp  (+25 more)
OpenXLSX/sources/utilities/: XLUtilities.hpp
Tests/: CMakeLists.txt  demo_tables.cpp  main.cpp  main_generator.cpp  main_validator.cpp  shared_formula_test.xlsx  testXLAdvancedLayout.cpp  testXLAutoFilter.cpp  testXLAutoFit.cpp  testXLBoundaries.cpp  testXLCell.cpp  testXLCellRange.cpp  testXLCellReference.cpp  testXLCellValue.cpp  testXLCellValueProxy.cpp  testXLChart.cpp  testXLChartAdvanced.cpp  testXLChartsheet.cpp  testXLColor.cpp  testXLColumn.cpp  testXLComments.cpp  testXLCommentsRichText.cpp  testXLCompatibility.cpp  testXLComprehensiveDemo.cpp  testXLConcurrent.cpp  testXLConcurrent_HighPressure.cpp  testXLConditionalFormatting.cpp  testXLConditionalFormattingAdvanced.cpp  testXLConditionalFormattingFinal.cpp  testXLCorruptFiles.cpp  testXLCrypto.cpp  testXLCryptoWrite.cpp  testXLCustomProperties.cpp  testXLDataValidation.cpp  testXLDateTime.cpp  testXLDefinedNames.cpp  testXLDocument.cpp  testXLDocumentOpenFuzzer.cpp  testXLDrawingTables.cpp  testXLEdgeCases.cpp  (+38 more)
Tests/Fixtures/: Encrypted_Agile.xlsx  excelize_generated.xlsx  formula_quirks.csv  openpyxl_generated.xlsx
Tests/Fixtures/Generators/: .gitignore  generate_openpyxl.py
Tests/Fixtures/Generators/go_gen/: main.go
